[package]
name = "onchg"
version = "0.1.6"
edition = "2021"
description = "Keep blocks in sync across different files in your codebase."
authors = ["Assil Ksiksi <assil@ksiksi.net>"]
readme = "README.md"
homepage = "https://github.com/aksiksi/onchg-rs"
repository = "https://github.com/aksiksi/onchg-rs"
# Verified using: https://lib.rs/crates/cargo-license
license = "MIT"

[[bin]]
name = "onchg"
path = "src/main.rs"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
lto = "thin"
strip = true

[features]
default = []
git = ["git2"]

[dependencies]
anyhow = "1"
base64 = "0"
bstr = "1.6.2"
clap = { version = "4.5", features = ["derive", "string"] }
env_logger = "0"
# We only need local Git repo support. Default features enable remote clone & fetch.
git2 = { version = "0", optional = true, default-features = false }
ignore = "0.4.23"
lazy_static = "1.4.0"
log = "0.4.20"
patch = "0.7.0"
rand = "0.8.5"
rayon = "1"
regex = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
criterion = "0"
indoc = "2.0.4"
predicates = "3.0.4"

[[bench]]
name = "directory"
harness = false

[[bench]]
name = "repo"
harness = false
